[project]
name = "lazyblorg"
version = "2025.12.13.1"
description = "Blogging with Emacs Org-mode for very lazy people"
keywords= ["orgmode", "weblog", "homepage", "orgdown", "blog", "static website generator"]
authors = [{name="Karl Voit", email="tools@Karl-Voit.at"}]
license = {file = "license.txt"}

readme = {text = """
Read https://github.com/novoid/lazyblorg/blob/master/README.org
""", content-type = "text/plain"}

requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "orgformat>=2025.12.13.1",
    "pypandoc>=1.16.2",
    "werkzeug>=3.1.4",
]

# sequence along https://pypi.org/classifiers
classifiers=[
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["lib/tests", "tests"]
python_files = ["*_test.py"]
pythonpath = [".", "lib"]
